# kirin

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  repl.rs  shell.rs  shell_tests.rs
crates/core/: Cargo.toml
crates/core/src/: column.rs  lib.rs  row.rs  storage.rs  table.rs  value.rs  value_type.rs
crates/database/: Cargo.toml
crates/database/src/: database.rs
crates/sql/src/: handler.rs
crates/storage/: Cargo.toml
crates/storage/src/: disk.rs  lib.rs  memory.rs  row.rs  storage.rs  value.rs
crates/storage/tests/: memory_insert_fetch.rs
crates/table/: Cargo.toml
crates/table/src/: lib.rs  table.rs  value_type.rs
crates/table/tests/: table_basic.rs
tests/: Cargo.toml  core_table_tests.rs  interface_shell_tests.rs  storage_memory_tests.rs
